--- a/tank_level_control/tank_level_control.ioc
+++ b/tank_level_control/tank_level_control.ioc
@@ -10,11 +10,17 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PA15
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin3=PA8
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -31,10 +37,40 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=GPIO_Speed,GPIO_Label
+PA10.GPIO_Label=LCD_D4
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Speed,GPIO_Label
+PA11.GPIO_Label=LCD_D5
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Speed,GPIO_Label
+PA12.GPIO_Label=LCD_D6
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Speed,GPIO_Label
+PA15.GPIO_Label=LCD_D7
+PA15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA15.Locked=true
+PA15.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Speed,GPIO_Label
+PA8.GPIO_Label=LCD_RS
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Speed,GPIO_Label
+PA9.GPIO_Label=LCD_EN
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -69,7 +105,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
