--- a/tank_level_control/tank_level_control.ioc
+++ b/tank_level_control/tank_level_control.ioc
@@ -5,22 +5,26 @@ Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=TIM2
+Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA15
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PA15
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA8
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=12
+Mcu.Pin3=PB10
+Mcu.Pin4=PB11
+Mcu.Pin5=PA8
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -71,6 +75,14 @@ PA9.GPIO_Label=LCD_EN
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=TRIG
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=ECHO
+PB11.Locked=true
+PB11.Signal=GPIO_Input
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -105,7 +117,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -127,7 +139,11 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+TIM2.IPParameters=Prescaler
+TIM2.Prescaler=71
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
