--- a/tank_level_control/tank_level_control.ioc
+++ b/tank_level_control/tank_level_control.ioc
@@ -13,30 +13,36 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM4
-Mcu.IPNb=6
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PA15
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB5
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA3
 Mcu.Pin5=PB10
 Mcu.Pin6=PB11
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=18
+Mcu.Pin7=PB15
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -104,6 +110,15 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=ECHO
 PB11.Locked=true
 PB11.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=PUMP_PWM
+PB15.Locked=true
+PB15.Mode=PWM Generation3 CH3N
+PB15.Signal=TIM1_CH3N
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=PUMP_EN
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
@@ -138,7 +153,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -163,6 +178,11 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+TIM1.Channel-PWM\ Generation3\ CH3N=TIM_CHANNEL_3
+TIM1.IPParameters=Period,Prescaler,Channel-PWM Generation3 CH3N,OCNIdleState_3
+TIM1.OCNIdleState_3=TIM_OCNIDLESTATE_SET
+TIM1.Period=625
+TIM1.Prescaler=127
 TIM2.IPParameters=Prescaler
 TIM2.Prescaler=71
 TIM4.IPParameters=Prescaler,Period
@@ -170,8 +190,12 @@ TIM4.Period=10 - 1
 TIM4.Prescaler=7200 - 1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
