Add setInitialValveOpening function

--- a/tank_level_control/tank_level_control.ioc
+++ b/tank_level_control/tank_level_control.ioc
@@ -23,29 +23,31 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA10
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PA15
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PA15
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA3
 Mcu.Pin5=PB10
 Mcu.Pin6=PB11
-Mcu.Pin7=PB15
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=24
+Mcu.Pin7=PB12
+Mcu.Pin8=PB13
+Mcu.Pin9=PB15
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -113,6 +115,15 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=ECHO
 PB11.Locked=true
 PB11.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=VALVE_DIR
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=VALVE_PWM
+PB13.Locked=true
+PB13.Mode=PWM Generation1 CH1N
+PB13.Signal=TIM1_CH1N
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=PUMP_PWM
 PB15.Locked=true
@@ -162,7 +173,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -187,8 +198,9 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation3\ CH3N=TIM_CHANNEL_3
-TIM1.IPParameters=Period,Prescaler,Channel-PWM Generation3 CH3N,OCNIdleState_3
+TIM1.IPParameters=Period,Prescaler,Channel-PWM Generation3 CH3N,OCNIdleState_3,Channel-PWM Generation1 CH1N
 TIM1.OCNIdleState_3=TIM_OCNIDLESTATE_SET
 TIM1.Period=625
 TIM1.Prescaler=127
